--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 id="heading">Are you ready to feel all the feels?</h2>
+    <h2 id="heading">Are you ready ?</h2>
     <img id="gif" src="hello.gif" alt="Cute Gif" width="200px" />
     <div class="buttons">
       <button onclick="sayYes()">Yes 💘</button>
