--- a/message.html
+++ b/message.html
@@ -4,15 +4,15 @@
       Hey Babydoll,<br><br>
       I am sorry for my recent behaviour,<br>
       voh actually mein thodi si,<br>
-      nhi nhi thodi jyada pagal jaisa behave kar rahi thi. 💭<br><br>
-      Voh mera thoda depressive episode chal raha tha,<br>
+      nhi nhi thodi jyada pagal jaisa behave kar rahi thi. <br>
       mein haar cheez ko over analyze and ovethink kar ke kuch bhi soch rahi thi <br>
-      usmein maine tujhe bhi hurt kiya, I am so sorry 🥺<br><br>
+      just because things were messy in my head i was behaving badly <br>
+      usmein maine tujhe bhi hurt kiya, I am so sorry 🥺<br>
       But abhi I’m alright now 🫶<br>
-      Thank you for getting me and being patient with me 💗<br><br>
+      Thank you for getting me and being patient with me 💗<br>
       Ik sometimes I’m too much to deal with,<br>
       but thanks for not giving up on me ever.<br><br>
-      Love you, always 💖
+      Love you,💖
     </p>
     <button class="arrow" onclick="loadPage('gallery')">➜</button>
   </div>
